add change page in add task

--- a/add_task.html
+++ b/add_task.html
@@ -22,7 +22,7 @@
             <div w3-include-html="./assets/templates/header/header.html"></div>
             <section class="add_task_content" onclick="closeDropdown()">
 
-                <form onsubmit="checkForm(event)">
+                <form onsubmit="checkFormFullPage(event)">
                     <div class="main_content">
                         <h1>Add Task</h1>
                         <div class="form_content">
