--- a/board.html
+++ b/board.html
@@ -53,7 +53,8 @@
   
 
   <script src="./script.js"></script>
-  <script src="./js/board.js"></script>
+  <script src="./js/board/board.js"></script>
+  <script src="./js/board/generateBoard.js"></script>
   <script src="./js/header.js"></script>
   <script src="./js/add_task.js"></script>
 </body>
