add summary funktions

--- a/summary.html
+++ b/summary.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="./assets/templates/header/header.css" />
     <link rel="stylesheet" href="./assets/templates/sidebar/sidebar.css" />
     <script src="script.js"></script>
+    <script src="./js/summary.js"></script>
     <script src="./js/header.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="init()">
+<body onload="init(); initSummary()">
     <div w3-include-html="./assets/templates/header/header.html"></div>
     <div w3-include-html="./assets/templates/sidebar/sidebar.html"></div>
 
@@ -36,27 +37,27 @@
             <div class="summary_overview">
                 <div>
                     <div class="summary_doings">
-                        <div class="summary_todo">
+                        <div class="summary_todo" onclick="goToBoard()">
                             <div class="summary_img"></div>
                             <div class="summary_todo_nummberAndText">
-                                <span class="summary_number">1</span>
+                                <span class="summary_number" id="summary_todo_number"></span>
                                 <span class="summary_text_small">To-do</span>
                             </div>
                         </div>
-                        <div class="summary_todo">
+                        <div class="summary_todo" onclick="goToBoard()">
                             <div class="summary_img_hook"></div>
                             <div class="summary_todo_nummberAndText">
-                                <span class="summary_number">1</span>
+                                <span class="summary_number" id="summary_done_number"></span>
                                 <span class="summary_text_small">Done</span>
                             </div>
                         </div>
                     </div>
                     <div >
-                        <div class="summary_urgent_container">
+                        <div class="summary_urgent_container" onclick="goToBoard()">
                             <div class="summary_urgent_field">
                                 <img class="arrow_icon" src="./assets/img/img_summary/arrowsPointingUpRed.png" alt="">
                                 <div>
-                                    <h2 class="summary_number">1</h2>
+                                    <h2 class="summary_number" id="summary_urgent_number">1</h2>
                                     <span class="summary_urgent_text">Urgent</span>
                                 </div>
                                 <div class="summary_stroke">
@@ -73,16 +74,16 @@
                         </div>
                     </div>
                     <div class="summary_tasks">
-                        <div class="summary_tasks_field">
-                            <h2 class="summary_number">5</h2>
+                        <div class="summary_tasks_field" onclick="goToBoard()">
+                            <h2 class="summary_number" id="summary_tasks_number">5</h2>
                             <span class="summary_tasks_text">Tasks in <br> Board</span>
                         </div>
-                        <div class="summary_tasks_field">
-                            <h2 class="summary_number">2</h2>
+                        <div class="summary_tasks_field" onclick="goToBoard()">
+                            <h2 class="summary_number" id="summary_progress_number">2</h2>
                             <span class="summary_tasks_text">Tasks in <br> Progress</span>
                         </div>
-                        <div class="summary_tasks_field">
-                            <h2 class="summary_number">2</h2>
+                        <div class="summary_tasks_field" onclick="goToBoard()">
+                            <h2 class="summary_number" id="summary_feedback_number">2</h2>
                             <span class="summary_tasks_text">Awaiting <br> Feeback</span>
                         </div>
                     </div>
@@ -90,8 +91,8 @@
             </div>
             
             <div class="summary_greeting">
-                <span class="summary_greeting_text">Good morning,</span>
-                <div class="user_name">Sofia Müller</div>
+                <span class="summary_greeting_text" id="greeting">Good morning,</span>
+                <div class="user_name" id="user_name_greeting">Sofia Müller</div>
             </div>
         </div>
     </div>
