added logout privacy_policy/ legal_notice sidebar features

--- a/login.html
+++ b/login.html
@@ -80,6 +80,7 @@
                 onclick="toggleCheckboxLogin()"
                 src="./assets/img/logIn/unchecked.png"
                 alt="Checkbox"
+                
               />
               Remember me
             </div>
@@ -105,8 +106,8 @@
 
       <!-- --- FOOTER --- -->
       <footer class="login_page_bottom">
-        <a href="./privacy_policy.html">Privacy Policy</a>
-        <a href="./legal_notice.html">Legal notice</a>
+        <a href="./privacy_policy_logout.html">Privacy Policy</a>
+        <a href="./legal_notice_logout.html">Legal notice</a>
       </footer>
     </section>
   </body>
