--- a/sign_up.html
+++ b/sign_up.html
@@ -102,6 +102,7 @@
             </div>
 
             <div class="signup_check">
+              <input type="checkbox" required>
               <img
                 id="checkSignup"
                 onclick="toggleCheckboxSignup()"
