added sidebar currentPage highlight

--- a/add_task.html
+++ b/add_task.html
@@ -112,5 +112,6 @@
     <script src="./script.js"></script>
     <script src="./js/add_task.js"></script>
     <script src="./js/header.js"></script>
+    <script src="./js/sidebar.js"></script>
 </body>
 </html
