add search function

--- a/board.html
+++ b/board.html
@@ -27,7 +27,7 @@
           <h1>Board</h1>
           <div class="headline_input_container">
             <div class="headline_input">
-              <input type="text" placeholder="Find Task">
+              <input id="search_task_input" type="text" placeholder="Find Task" onkeydown="searchTask()">
               <div class="br"></div>
               <img src="./assets/img/board/magnifiying_glass.png" alt="search task input">
             </div>
