changed imprint, added JS Doc to functions

--- a/legal_notice_logout.html
+++ b/legal_notice_logout.html
@@ -15,16 +15,23 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./assets/css/legal_notice.css" />
     <link rel="stylesheet" href="./assets/templates/header/header_logout.css" />
-    <link rel="stylesheet" href="./assets/templates/sidebar/sidebar_logout.css" />
+    <link
+      rel="stylesheet"
+      href="./assets/templates/sidebar/sidebar_logout.css"
+    />
   </head>
   <body onload="init()">
     <main>
       <section class="side_bar_container">
-        <div w3-include-html="./assets/templates/sidebar/sidebar_logout.html"></div>
+        <div
+          w3-include-html="./assets/templates/sidebar/sidebar_logout.html"
+        ></div>
       </section>
 
       <section>
-        <div w3-include-html="./assets/templates/header/header_logout.html"></div>
+        <div
+          w3-include-html="./assets/templates/header/header_logout.html"
+        ></div>
         <section class="container">
           <div class="container_head">
             <h1>Legal notice</h1>
@@ -33,33 +40,106 @@
             </a>
           </div>
           <h2>Imprint</h2>
-          <h2>Information according to § 5 TMG</h2>
-          <p>Daniel Sinteck<br />Beim Salztor 1<br />21682 Stade</p>
-          <p>Represented by:<br />Florian Kube<br />Roman Kinzel</p>
-          <h2>Contact:</h2>
+          <ul>
+            <li>
+              <p>
+                Daniel Sinteck <br />
+                Florian Kube <br />
+                Roman Kinzel
+              </p>
+            </li>
+            <li>
+              <p>Ordenskamp 42</p>
+            </li>
+            <li>
+              <p>21717, Fredenbeck</p>
+            </li>
+          </ul>
+          <br />
+          <h3>Exploring the Board Email:</h3>
+          <p>[Email]</p>
+          <br />
+          <h3>Acceptance of terms</h3>
           <p>
-            Phone: 0151-80459210<br />Email:
-            <a href="mailto:daniel.sinteck@web.de">daniel.sinteck@web.de</a>
+            By accessing and using
+            <span class="font_color">Join</span> (Product), you acknowledge and
+            agree to the following terms and conditions, and any policies,
+            guidelines, or amendments thereto that may be presented to you from
+            time to time. We, the listed students, may update or change the
+            terms and conditions from time to time without notice.
           </p>
-          <h2>Disclaimer:</h2>
-          <h3>Liability for content</h3>
+
+          <h3>Scope and ownership of the product</h3>
           <p>
-            The contents of our pages were created with the greatest care.
-            However, we cannot guarantee the correctness, completeness and
-            topicality of the contents. As a service provider, we are
-            responsible for our own content on these pages in accordance with §
-            7 para.1 TMG (German Telemedia Act) and general laws. According to
-            §§ 8 to 10 TMG, we are not obliged to monitor transmitted or stored
-            third-party information or to investigate circumstances that
-            indicate illegal activity.
+            <span class="font_color">Join</span> has been developed as part of a
+            student group project in a web development bootcamp at the
+            <span class="font_color">Developer Akademie GmbH</span>. It has an
+            educational purpose and is not intended for extensive personal &
+            business usage. As such, we cannot guarantee consistent
+            availability, reliability, accuracy, or any other aspect of quality
+            regarding this Product.
           </p>
           <p>
-            Obligations to remove or block the use of information in accordance
-            with general laws remain unaffected by this. However, liability in
-            this respect is only possible from the time of knowledge of a
-            concrete infringement. If we become aware of any such legal
-            violations, we will remove the content in question immediately.
+            The design of <span class="font_color">Join</span> is owned by the
+            <span class="font_color">Developer Akademie GmbH</span>.
+            Unauthorized use, reproduction, modification, distribution, or
+            replication of the design is strictly prohibited.
           </p>
+
+          <h3>Proprietary rights</h3>
+          <p>
+            Aside from the design owned by
+            <span class="font_color">Developer Akademie GmbH</span>, we, the
+            listed students, retain all proprietary rights in
+            <span class="font_color">Join</span>, including any associated
+            copyrighted material, trademarks, and other proprietary information.
+          </p>
+
+          <h3>Use of the product</h3>
+          <p>
+            <span class="font_color">Join</span> is intended to be used for
+            lawful purposes only, in accordance with all applicable laws and
+            regulations. Any use of <span class="font_color">Join</span> for
+            illegal activities, or to harass, harm, threaten, or intimidate
+            another person, is strictly prohibited. You are solely responsible
+            for your interactions with other users of
+            <span class="font_color">Join</span>.
+          </p>
+
+          <h3>Disclaimer of warranties and limitation of liability</h3>
+          <p>
+            <span class="font_color">Join</span> is provided "as is" without
+            warranty of any kind, whether express or implied, including but not
+            limited to the implied warranties of merchantability, fitness for a
+            particular purpose, and non-infringement. In no event will we, the
+            listed students, or the
+            <span class="font_color">Developer Akademie</span>, be liable for
+            any direct, indirect, incidental, special, consequential or
+            exemplary damages, including but not limited to, damages for loss of
+            profits, goodwill, use, data, or other intangible losses, even if we
+            have been advised of the possibility of such damages, arising out of
+            or in connection with the use or performance of
+            <span class="font_color">Join</span>.
+          </p>
+
+          <h3>Indemnity</h3>
+          <p>
+            You agree to indemnify, defend and hold harmless us, the listed
+            students, the <span class="font_color">Developer Akademie</span>,
+            and our affiliates, partners, officers, directors, agents, and
+            employees, from and against any claim, demand, loss, damage, cost,
+            or liability (including reasonable legal fees) arising out of or
+            relating to your use of <span class="font_color">Join</span> and/or
+            your breach of this Legal Notice.
+          </p>
+
+          <p>
+            For any questions or notices, please contact us at
+            <a href="mailto:info@developerakademie.com"
+              >info@developerakademie.com</a
+            >.
+          </p>
+          <p>Date: July 26, 2023</p>
         </section>
       </section>
     </main>
