--- a/board.html
+++ b/board.html
@@ -1,62 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Join</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Join</title>
+    <link
+      rel="shortcut icon"
+      href="./assets/img/favicon_light.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./assets/templates/header/header.css" />
+    <link rel="stylesheet" href="./assets/templates/sidebar/sidebar.css" />
+    <link rel="stylesheet" href="./assets/css/board.css" />
+    <link
+      rel="stylesheet"
+      href="./assets/templates/add_task/add_task_template.css"
+    />
+    <link rel="stylesheet" href="./assets/css/overlay.css" />
+  </head>
 
-  <link rel="shortcut icon" href="./assets/img/favicon_light.png" type="image/x-icon" />
-  <link rel="stylesheet" href="./style.css" />
-  <link rel="stylesheet" href="./assets/templates/header/header.css">
-  <link rel="stylesheet" href="./assets/templates/sidebar/sidebar.css">
-  <link rel="stylesheet" href="./assets/css/board.css">
-  <link rel="stylesheet" href="./assets/templates/add_task/add_task_template.css">
-  <link rel="stylesheet" href="./assets/css/overlay.css">
-</head>
-
-<body onload="init(); initBoard(); initAddTask()">
-  <div class="container">
-    <div class="side_bar_position_container">
-      <div w3-include-html="./assets/templates/sidebar/sidebar.html"></div>
-    </div>
-    <main>
-      <div w3-include-html="./assets/templates/header/header.html"></div>
-      <div class="board_content">
-        <section class="headline_section">
-          <h1>Board</h1>
-          <div class="headline_input_container">
-            <div class="headline_input">
-              <input id="search_task_input" type="text" placeholder="Find Task" onkeydown="searchTask()">
-              <div class="br"></div>
-              <img src="./assets/img/board/magnifiying_glass.png" alt="search task input">
+  <body onload="init(); initBoard(); initAddTask()">
+    <div class="container">
+      <div class="side_bar_position_container">
+        <div w3-include-html="./assets/templates/sidebar/sidebar.html"></div>
+      </div>
+      <main>
+        <div w3-include-html="./assets/templates/header/header.html"></div>
+        <div class="board_content">
+          <section class="headline_section">
+            <h1>Board</h1>
+            <div class="headline_input_container">
+              <div class="headline_input">
+                <input
+                  id="search_task_input"
+                  type="text"
+                  placeholder="Find Task"
+                  onkeydown="searchTask()"
+                />
+                <div class="br"></div>
+                <img
+                  src="./assets/img/board/magnifiying_glass.png"
+                  alt="search task input"
+                />
+              </div>
+              <button onclick="showAddTask()" class="add_task_button">
+                Add task <img src="./assets/img/board/add.png" />
+              </button>
             </div>
-            <button onclick="showAddTask()" class="add_task_button">Add task <img src="./assets/img/board/add.png"></button>
-          </div>
-        </section>
-        <section class="category_section" id="category_section">
-        </section>
-      </div>
-    </main>
-  </div>
-  <div id="add_task_popup" onclick="closeAddTask()">
-    <div id="add_task_popup_content">
-      
+          </section>
+          <section class="category_section" id="category_section"></section>
+        </div>
+      </main>
     </div>
-  </div>
+    <div id="add_task_popup" onclick="closeAddTask()">
+      <div id="add_task_popup_content"></div>
+    </div>
 
-  <div id="card_popup" onclick="closePopUpCard()">
-      <div id="card_popup_content" onclick="stopEvent(event)">
+    <div id="card_popup" onclick="closePopUpCard()">
+      <div id="card_popup_content" onclick="stopEvent(event)"></div>
+    </div>
 
-      </div>
-  </div>
-  
-
-  <script src="./script.js"></script>
-  <script src="./js/board/board.js"></script>
-  <script src="./js/board/generateBoard.js"></script>
-  <script src="./js/header.js"></script>
-  <script src="./js/add_task.js"></script>
-</body>
-
+    <script src="./script.js"></script>
+    <script src="./js/board/board.js"></script>
+    <script src="./js/board/generateBoard.js"></script>
+    <script src="./js/header.js"></script>
+    <script src="./js/add_task.js"></script>
+  </body>
 </html>
