added passwordConfirm Function

--- a/login.html
+++ b/login.html
@@ -76,7 +76,7 @@
 
             <div class="login_check">
               <img
-                id="checkLogin"
+                id="unchecked"
                 onclick="toggleCheckboxLogin()"
                 src="./assets/img/logIn/unchecked.png"
                 alt="Checkbox"
