--- a/sign_up.html
+++ b/sign_up.html
@@ -18,7 +18,7 @@
   <body>
     <section class="signup_page_container">
       <!-- -- HEADER--- -->
-      <header class="login_page_head">
+      <header class="signup_page_head">
         <img src="./assets/img/logIn/logo_desktop.png" alt="Join Logo" />
       </header>
 
