update greeting summary

--- a/summary.html
+++ b/summary.html
@@ -110,8 +110,8 @@
         </div>
 
         <div class="summary_greeting">
-          <span class="summary_greeting_text" id="greeting">Good morning,</span>
-          <div class="user_name" id="user_name_greeting">Sofia Müller</div>
+          <span class="summary_greeting_text" id="greeting"></span>
+          <div class="user_name" id="user_name_greeting"></div>
         </div>
       </div>
     </div>
