--- a/contacts.html
+++ b/contacts.html
@@ -34,6 +34,7 @@
           </div>
         </div>
         <div class="contact_scrolls_div">
+          <div id="userAccount"></div>
           <!-- 
             
           <div class="contact_scrolls_card_small_onclick">
