--- a/sign_up.html
+++ b/sign_up.html
@@ -27,7 +27,7 @@
         <form onsubmit="inputValue(); return false" class="signup_card">
           <!-- -- signupHead--- -->
           <div class="signup_card_head">
-            <a class="back_arrow" href="./login.html">
+            <a class="back_arrow" href="./index.html">
               <img
                 id="backArrow"
                 src="./assets/img/signUp/arrow_left.png"
