--- a/sign_up.html
+++ b/sign_up.html
@@ -79,7 +79,12 @@
                   required
                 />
                 <div>
-                  <img src="./assets/img/logIn/lock.png" alt="Passwort" />
+                  <img
+                    id="SignupPwImg"
+                    onclick="togglePwIconSignup()"
+                    src="./assets/img/logIn/visibility_off.png"
+                    alt="Passwort"
+                  />
                 </div>
               </div>
 
@@ -92,7 +97,12 @@
                   required
                 />
                 <div>
-                  <img src="./assets/img/logIn/lock.png" alt="Confirm Button" />
+                  <img
+                    id="SignupPwImgConfirm"
+                    onclick="togglePwIconConfirm()"
+                    src="./assets/img/logIn/visibility_off.png"
+                    alt="Confirm Button"
+                  />
                 </div>
               </div>
             </div>
