update summary js

--- a/summary.html
+++ b/summary.html
@@ -77,7 +77,7 @@
                                     </svg> -->
                   </div>
                   <div>
-                    <div class="summary_date" id="upcomimg_deadline">October 16, 2022</div>
+                    <div class="summary_date" id="upcoming_deadline">October 16, 2022</div>
                     <span class="summary_urgent_text">Upcoming Deadline</span>
                   </div>
                 </div>
