--- a/sign_up.html
+++ b/sign_up.html
@@ -78,14 +78,13 @@
                   placeholder="Password"
                   required
                 />
-                <div>
-                  <img
-                    id="SignupPwImg"
-                    onclick="togglePwIconSignup()"
-                    src="./assets/img/logIn/visibility_off.png"
-                    alt="Passwort"
-                  />
-                </div>
+
+                <img
+                  id="signupPwImg"
+                  onclick="togglePwIconSignup()"
+                  src="./assets/img/logIn/visibility_off.png"
+                  alt="Passwort"
+                />
               </div>
 
               <div id="passwordConfirmContainer" class="signup_input">
@@ -96,14 +95,13 @@
                   placeholder="Confirm Password"
                   required
                 />
-                <div>
-                  <img
-                    id="SignupPwImgConfirm"
-                    onclick="togglePwIconConfirm()"
-                    src="./assets/img/logIn/visibility_off.png"
-                    alt="Confirm Button"
-                  />
-                </div>
+
+                <img
+                  id="signupPwImgConfirm"
+                  onclick="togglePwIconConfirm()"
+                  src="./assets/img/logIn/visibility_off.png"
+                  alt="Confirm Button"
+                />
               </div>
             </div>
 
